# fourier-contracts

./: .gitignore  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml
contracts/registry/: Cargo.toml  README.md
contracts/registry/src/: access_control.rs  errors.rs  events.rs  lib.rs  metadata.rs  storage.rs  types.rs  validation.rs
contracts/registry/test_snapshots/: test_initialize.1.json  test_list_contracts.1.json  test_register_and_get_reputation.1.json  test_remove_contract.1.json  test_transfer_admin.1.json  test_update_reputation.1.json  test_validation_rules.1.json
docs/: architecture.md  contribution_log.md  protocol.md  roadmap.md  security.md  storage.md
scripts/: build.sh  deploy.sh  format.sh  test.sh
tests/: registry.rs
